# mtxt

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  instruments.md
.github/workflows/: build.yml  gh-pages.yml
src/: file.rs  lib.rs  main.rs  parser.rs  record_parser.rs  transitions.rs  wasm.rs
src/midi/: midi_to_mtxt.rs  mod.rs  mtxt_to_midi.rs  shared.rs
src/transforms/: exclude.rs  extract.rs  group.rs  include.rs  mod.rs
src/types/: beat_expression.rs  beat_fraction.rs  beat_time.rs  mod.rs  note.rs  output_record.rs  record.rs
tests/snapshots/: basic.out.events  basic.out.mtxt
web/: index.html  script.js  styles.css
